# carnet

./: .gitignore  CONTRIBUTING.en.md  NEWS.en.md  README.en.md  README.md  carnet
.carnet/: initialized  seal-ignore.list
.carnet/seal/: sealed  signatures.sha256  signatures.sha256.1db590b59b0f72a48d4f.sig  signatures.sha384  signatures.sha384.1db590b59b0f72a48d4f.sig
.private-staging/: EuhXwWP3KHituntu6prfcumglts1vivVI9bAfw42R3I  H7SWYRC11570750265xLKvsAlVfDsOo8C2vXCY2Zcys  HpbujYyg0gNduDTF21pLFQ  XJmkw3Ts8j_ETYiJEOFiHVtK4iDEj-mjOsTgrg85yzQ  ZUj-Y4f_a3rP4LSLK7hvbXOR6HXCjWW9n0-Zke_B5h8  gocryptfs.conf  gocryptfs.diriv  qmUWAVhd-RYoVHC5eVxmOg
etc/: assemble.sh
etc/rust-preview/: Cargo.toml
rust-preview/: Cargo.toml
rust-preview/src/: lib.rs
src/: authentication.sh  configuration.sh  dependencies.sh  fingerprint.sh  help.sh  identity.sh  init.sh  io.sh  main.sh  ownership.sh  packaging.sh  sandboxing.sh  session.sh  setup-and-upgrade-scripts.sh  trap.sh  trust.sh
src/misc/: warning-message.sh
tests/: carnet-test.sh  common.sh
tests/cases/: 00-sanity.sh  0000-ignored.crates-io.sh  cargo-1.sh  messing-with-validation.sh  ownership-1.sh  ownership-2.sh  ownership-3.sh  sandbox-1.sh
